# sterm

./: .editorconfig  .gitignore  Cargo.toml  PRD.md  rustfmt.toml  test_esc_key.sh  test_log.txt
src/: main.rs
src/config/: mod.rs
src/terminal/: mod.rs
src/ui/: mod.rs
src/utils/: color.rs  font.rs  korean_ime.rs  mod.rs  platform.rs
ui/: main_window.slint
