[package]
name = "sterm"
version = "0.1.0"
edition = "2021"
authors = ["STerm Team"]
description = "A modern terminal emulator built with Slint and alacritty_terminal"
license = "MIT"
repository = "https://github.com/xiphoid/sterm"

[dependencies]
# GUI Framework
slint = "1.4"

# Terminal emulation
alacritty_terminal = "0.25"
alacritty_config = "0.1"

# rustix 버전 고정 (alacritty_terminal 호환성)
rustix = "=0.38.44"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Cross-platform
winit = "0.29"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# System integration
libc = "0.2"
dirs = "5.0"

[build-dependencies]
slint-build = "1.4"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS specific dependencies
objc = "0.2"
cocoa = "0.25"
core-graphics = "0.23"

[[bin]]
name = "sterm"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0
